# prior-auth-agent

./: .env.example  .gitignore  DECISIONS.md  README.md  pyproject.toml
data/policies/: knee_arthroscopy_29881.md
data/samples/: sample_bundle.json
src/prior_auth_agent/: __init__.py  audit_log.py  config.py  graph.py  llm.py  state.py  validation.py
src/prior_auth_agent/hitl/: review_app.py
src/prior_auth_agent/nodes/: __init__.py  citation_gate.py  confidence_gate.py  criteria_mapper.py  determination.py  eligibility.py  evidence_extractor.py  intake.py  policy_rag.py
src/prior_auth_agent/vectorstore/: ingest.py  store.py
tests/: test_audit_log.py  test_citation_gate.py  test_graph.py  test_no_denial.py
