[project]
name = "prior-auth-agent"
version = "0.1.0"
description = "Healthcare prior-authorization agent: LangGraph pipeline with policy RAG and HITL review"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.116.0",
    "langgraph>=0.2.0",
    "chromadb>=0.5.0",
    "streamlit>=1.38.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
